--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1,33 +1,63 @@
-.App {
-  text-align: center;
+#bigHeader{
+  height:50px;
+  width:100%;
+  background-color:white;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.headerItem{
+margin-top: -1px;
+padding-top:10px;
+position:absolute;
+height:40px;
+background-color:#bbeebb;
+transition-duration: 400ms;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#search{
+width: 25%;
 }
-
-.App-link {
-  color: #61dafb;
+#logo{
+margin-left: 25%;
+width:50%;
+text-align:center;
+font-size:2.2em;
+padding-top:5px;
+height:45px;
+font-family:helvetica;
+font-weight:bold;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#login{
+margin-left:75%;
+width:25%;
+}
+#login:hover{
+background-color: #aaffaa;
+}
+#submit{
+  width:30px;
+  height:30px;
+  margin-top:0px;
+  padding-top:0px;
+  margin-left:58%;
+  position:absolute;
+  background-color:#99dd99;
+  border-style:none;
+  border-radius:100%;
+}
+#box{
+  height:20px;
+  background-color:#ddeedd;
+  border-style:none;
+  font-size:1em;
+  width:46%;
+  margin-top: 4px;
+  margin-left:10%;
+  position:absolute;
+  border-radius:5px;
+  border-width:1px;
+  border-color:black;
+  border-style:solid;
+}
+#magnifying{
+  margin-top:5px;
+  height:60%;
+  width:100%;
 }
