--- a/nyclean/src/Home/Home.css
+++ b/nyclean/src/Home/Home.css
@@ -6,3 +6,26 @@ header {
   height: 50px;
   font-size: 30px;
 }
+
+#rectangle{
+    width:200px;
+    height:675px;
+    background:lightgray;
+}
+
+#circle{
+  float: right;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: lightgray;
+}
+
+footer {
+ position: absolute;
+ bottom: 0;
+ width: 100%;
+ padding-bottom: 10px;
+ padding-top: 10px;
+}
