--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1,14 +1,18 @@
+a{
+  color:black;
+  text-decoration:none;
+}
 #bigHeader{
-  height:50px;
-  width:100%;
-  background-color:white;
+  height: 50px;
+  width: 100%;
+  background-color: #bbeebb;
 }
 .headerItem{
 margin-top: -1px;
-padding-top:10px;
-position:absolute;
-height:40px;
-background-color:#bbeebb;
+padding-top: 10px;
+position: absolute;
+height: 40px;
+background-color: #bbeebb;
 transition-duration: 400ms;
 }
 #search{
@@ -16,48 +20,72 @@ width: 25%;
 }
 #logo{
 margin-left: 25%;
-width:50%;
-text-align:center;
-font-size:2.2em;
-padding-top:5px;
-height:45px;
-font-family:helvetica;
-font-weight:bold;
+width: 50%;
+text-align: center;
+font-size: 2.2em;
+padding-top: 5px;
+height: 45px;
+font-family: helvetica;
+font-weight: bold;
 }
 #login{
-margin-left:75%;
-width:25%;
+margin-right: 10px;
+font-size:1em;
+position:relative;
+float:right;
+width: 10%;
+border-radius: 5px;
+height: 35px;
+margin-top:2px;
+padding-left: 10px;
+white-space:nowrap;
+overflow:hidden;
 }
 #login:hover{
 background-color: #aaffaa;
 }
 #submit{
-  width:30px;
-  height:30px;
-  margin-top:0px;
-  padding-top:0px;
-  margin-left:58%;
-  position:absolute;
-  background-color:#99dd99;
-  border-style:none;
-  border-radius:100%;
+  width: 30px;
+  height: 30px;
+  margin-top: 0px;
+  padding-top: 0px;
+  margin-left: 58%;
+  position: absolute;
+  background-color: #99dd99;
+  border-style: none;
+  border-radius: 100%;
 }
 #box{
-  height:20px;
-  background-color:#ddeedd;
-  border-style:none;
-  font-size:1em;
-  width:46%;
+  height: 20px;
+  background-color: #ddeedd;
+  border-style: none;
+  font-size: 1em;
+  width: 46%;
   margin-top: 4px;
-  margin-left:10%;
-  position:absolute;
-  border-radius:5px;
-  border-width:1px;
-  border-color:black;
-  border-style:solid;
+  margin-left: 10%;
+  position: absolute;
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
 }
 #magnifying{
-  margin-top:5px;
-  height:60%;
+  margin-top: 5px;
+  height: 60%;
+  width: 100%;
+}
+#profile{
+  height: 30px;
+  width: 30px;
+  background-color: black;
+  border-radius: 100%;
+  position:absolute;
+  right:0px;
+  top:8px;
+  margin-right: 10%;
+}
+#profilepic{
+  height:100%;
   width:100%;
+  border-radius:100%;
 }
