--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -61,3 +61,31 @@ background-color: #aaffaa;
   height:60%;
   width:100%;
 }
+
+#rectangle{
+    width:200px;
+    height:680px;
+    background:lightgray;
+}
+
+#circle{
+  position: absolute;
+  right:0;
+  top: 0;
+  margin-top: 75px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: lightgray;
+}
+
+
+footer {
+ position: absolute;
+ text-align:center;
+ bottom: 0;
+ width: 100%;
+ padding-bottom: 10px;
+ padding-top: 10px;
+}
