--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -27,6 +27,7 @@ padding-top: 5px;
 height: 45px;
 font-family: helvetica;
 font-weight: bold;
+font-style: italic;
 }
 #login{
 margin-right: 10px;
