--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1,7 +1,14 @@
+body{
+  overflow:hidden;
+}
 #bigHeader{
   height:50px;
   width:100%;
-  background-color:white;
+  background-color:#bbeebb;
+}
+a{
+  color:black;
+  text-decoration:none;
 }
 .headerItem{
 margin-top: -1px;
@@ -13,6 +20,8 @@ transition-duration: 400ms;
 }
 #search{
 width: 25%;
+background-color:transparent;
+z-index:1;
 }
 #logo{
 margin-left: 25%;
@@ -26,8 +35,16 @@ font-weight: bold;
 font-style: italic;
 }
 #login{
-margin-left:75%;
-width:25%;
+width:120px;
+padding-left:10px;
+right:10px;
+border-radius:10%;
+height:30px;
+margin-top:5px;
+}
+#rogueText{
+  margin-top:-3px;
+  position:absolute;
 }
 #login:hover{
 background-color: #aaffaa;
@@ -37,7 +54,7 @@ background-color: #aaffaa;
   height:30px;
   margin-top:0px;
   padding-top:0px;
-  margin-left:58%;
+  margin-left:230px;
   position:absolute;
   background-color:#99dd99;
   border-style:none;
@@ -48,9 +65,9 @@ background-color: #aaffaa;
   background-color:#ddeedd;
   border-style:none;
   font-size:1em;
-  width:46%;
+  width:200px;
   margin-top: 4px;
-  margin-left:10%;
+  margin-left:15px;
   position:absolute;
   border-radius:5px;
   border-width:1px;
@@ -81,7 +98,14 @@ background-color: #aaffaa;
   border: none;
   background-color: lightgray;
 }
-
+#profilepic{
+  border-radius:100%;
+  height:30px;
+  width:30px;
+  position:absolute;
+  right:10px;
+  top:5px;
+}
 
 footer {
  position: absolute;
