--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -54,17 +54,9 @@ margin-top:5px;
 #rogueText{
 margin-top:-3px;
 position:absolute;
-margin-right: 10px;
 font-size:1em;
-position:relative;
-float:right;
-width: 10%;
-border-radius: 5px;
-height: 35px;
-margin-top:2px;
-padding-left: 10px;
+padding-left: 0px;
 white-space:nowrap;
-overflow:hidden;
 }
 #login:hover{
 background-color: #aaffaa;
@@ -94,20 +86,6 @@ border-width:1px;
 border-color:black;
 border-style:solid;
 }
-#box{
-height: 20px;
-background-color: #ddeedd;
-border-style: none;
-font-size: 1em;
-width: 46%;
-margin-top: 4px;
-margin-left: 10%;
-position: absolute;
-border-radius: 5px;
-border-width: 1px;
-border-color: black;
-border-style: solid;
-}
 #magnifying{
   margin-top: 5px;
   height: 60%;
@@ -119,26 +97,20 @@ border-style: solid;
   background-color: black;
   border-radius: 100%;
   position:absolute;
-  right:0px;
-  top:8px;
-  margin-right: 10%;
-}
-#profilepic{
-  height:100%;
-  width:100%;
-  border-radius:100%;
+  right:10px;
+  top:5px;
 }
 
 #rectangle{
     width:200px;
     height:680px;
-    background:lightgray;
+    background-color:lightgray;
 }
 
 #circle{
   position: absolute;
-  right:0;
-  top: 0;
+  right:0px;
+  top: -3px;
   margin-top: 75px;
   margin-right: 75px;
   height: 50px;
@@ -152,8 +124,7 @@ border-style: solid;
   height:30px;
   width:30px;
   position:absolute;
-  right:10px;
-  top:5px;
+  top:0px;
 }
 
 footer {
