icon bubbles added

--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -47,7 +47,7 @@ font-style: italic;
 width:120px;
 padding-left:10px;
 right:10px;
-border-radius:10%;
+border-radius:10px;
 height:30px;
 margin-top:5px;
 }
@@ -172,4 +172,178 @@ footer {
  padding-bottom: 10px;
  padding-top: 10px;
  background-color:#bbeebb;
+}
+.connector{
+  height:36px;
+  width:50px;
+  background-color:white;
+  position:absolute;
+  right:45px;
+  border-top-style:solid;
+  border-bottom-style:solid;
+  border-color:#f25822;
+  border-width:2px;
+}
+#con1{
+  top: 75px;
+}
+#con2{
+  top:140px;
+}
+#con3{
+  top:205px;
+}
+#con4{
+  top:635px;
+}
+.blocker{
+  height:35.5px;
+  width:20px;
+  background-color:white;
+  right:70px;
+  position:absolute;
+  z-index:2;
+}
+#blo1{
+  top:77.5px;
+}
+#blo2{
+  top: 142px;
+}
+#blo3{
+  top: 207px;
+}
+#blo4{
+  top: 637.5px;
+}
+.bubble{
+  height:300px;
+  width:250px;
+  border-color:#f25822;
+  border-style:solid;
+  border-width:2px;
+  border-radius:10px;
+  position:absolute;
+  right:80px;
+  background-color:white;
+}
+#bub1{
+  top:75px;
+}
+#bub2{
+  top:140px;
+}
+#bub3{
+  top:205px;
+}
+#bub4{
+  top:371px;
+}
+#icoTop1{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:77.5px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoMid1{
+  height:30px;
+  width:15px;
+  background-color:white;
+  top:77.5px;
+  right:55px;
+  position:absolute;
+  z-index:5;
+}
+#icoBot1{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:106px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoTop2{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:142.5px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoMid2{
+  height:30px;
+  width:15px;
+  background-color:white;
+  top:142.5px;
+  right:57px;
+  position:absolute;
+  z-index:4;
+}
+#icoBot2{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:170.5px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoTop3{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:207.5px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoMid3{
+  height:30px;
+  width:15px;
+  background-color:white;
+  top:207.5px;
+  right:56px;
+  position:absolute;
+  z-index:5;
+}
+#icoBot3{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:235px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoTop4{
+  height:7px;
+  width:20px;
+  background-color:white;
+  top:637.5px;
+  right:48px;
+  position:absolute;
+  z-index:4;
+}
+#icoMid4{
+  height:35px;
+  width:15px;
+  background-color:white;
+  top:637.5px;
+  right:55px;
+  position:absolute;
+  z-index:5;
+}
+#icoBot4{
+  height:4px;
+  width:20px;
+  background-color:white;
+  top:668.5px;
+  right:48px;
+  position:absolute;
+  z-index:4;
 }
