--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1,6 +1,20 @@
 body{
   overflow:hidden;
 }
+.linkText {
+  font-family: Helvetica, Sans-serif;
+  color: #1000A4;
+  font-size: 100%;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+}
+.normalText{
+  font-family: Helvetica, sans-serif;
+  font-size: 100%;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  color: #000000;
+}
 #bigHeader{
   height:50px;
   width:100%;
