--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -14,10 +14,16 @@
   color: #000000;
 }
 #bigHeader{
-  height:50px;
+  position: absolute;
   width:100%;
-  background-color:#bbeebb;
+  height:90px;
+
 }
+
+body{
+  background-color: lightgray;
+}
+
 a{
   color:black;
   text-decoration:none;
@@ -27,7 +33,6 @@ margin-top: -1px;
 padding-top: 10px;
 position: absolute;
 height: 40px;
-background-color: #bbeebb;
 transition-duration: 400ms;
 }
 .editUserBar{
@@ -35,7 +40,6 @@ margin-top: -1px;
 padding-top:10px;
 position:absolute;
 height:40px;
-background-color:#FFFFFF;
 transition-duration: 400ms;
 }
 
@@ -51,9 +55,9 @@ text-align: center;
 font-size: 2.2em;
 padding-top: 5px;
 height: 45px;
-font-family: helvetica;
-font-weight: bold;
-font-style: italic;
+font-family: canada-type-gibson, sans-serif;
+font-style: normal;
+font-weight: 900;
 }
 #login{
 width:120px;
@@ -123,9 +127,9 @@ border-style:solid;
 }
 
 #rectangle{
-    width:200px;
-    height:650px;
-    background:lightgray;
+    width:225px;
+    height:700px;
+    background:white;
 }
 
 #pin{
