--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -22,13 +22,16 @@ a{
   color:black;
   text-decoration:none;
 }
+a:hover{
+  color:black;
+  text-decoration:none;
+}
 .headerItem{
 margin-top: -1px;
 padding-top: 10px;
 position: absolute;
 height: 40px;
 background-color: #bbeebb;
-transition-duration: 400ms;
 }
 .editUserBar{
 margin-top: -1px;
@@ -36,7 +39,6 @@ padding-top:10px;
 position:absolute;
 height:40px;
 background-color:#FFFFFF;
-transition-duration: 400ms;
 }
 
 #search{
@@ -49,18 +51,18 @@ margin-left: 25%;
 width: 50%;
 text-align: center;
 font-size: 2.2em;
-padding-top: 5px;
-height: 45px;
+padding-top: 0px;
+height: 50px;
 font-family: helvetica;
 font-weight: bold;
 font-style: italic;
 }
 #login{
-width:120px;
+width:130px;
 padding-left:10px;
 right:10px;
 border-radius:10px;
-height:30px;
+height:40px;
 margin-top:5px;
 }
 #rogueText{
@@ -94,7 +96,7 @@ border-style:none;
 border-radius:100%;
 }
 #box{
-height:20px;
+height:25px;
 background-color:#ddeedd;
 border-style:none;
 font-size:1em;
@@ -108,7 +110,7 @@ border-color:black;
 border-style:solid;
 }
 #magnifying{
-  margin-top: 5px;
+  margin-top: -5px;
   height: 60%;
   width: 100%;
 }
@@ -186,7 +188,7 @@ footer {
  background-color:#bbeebb;
 }
 .connector{
-  height:36px;
+  height:40px;
   width:50px;
   background-color:white;
   position:absolute;
@@ -250,7 +252,7 @@ footer {
   top:205px;
 }
 #bub4{
-  top:371px;
+  top:375px;
 }
 
 #profilecircle {
