--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -17,7 +17,7 @@
   position: absolute;
   width:100%;
   height:90px;
-
+  z-index:1;
 }
 
 h1{
@@ -74,6 +74,7 @@ height: 50px;
 font-family: helvetica;
 font-weight: bold;
 font-style: italic;
+z-index:2;
 }
 #login{
 width:130px;
@@ -82,6 +83,7 @@ right:10px;
 border-radius:10px;
 height:40px;
 margin-top:5px;
+z-index:2;
 }
 #rogueText{
 margin-top:-3px;
@@ -146,6 +148,7 @@ border-style:solid;
     width:225px;
     height:700px;
     background:white;
+    visibility: hidden;
 }
 
 #pin{
@@ -156,8 +159,17 @@ border-style:solid;
   margin-right: 25px;
   height: 40px;
   width: auto;
+  z-index:2;
 }
-
+#map{
+  height:1000px;
+  width: 100%;
+  position:absolute;
+  top:40px;
+  left:0px;
+  z-index:0;
+  filter: grayscale(100%);
+}
 #emptypinicon{
   position: absolute;
   right:0;
@@ -166,7 +178,7 @@ border-style:solid;
   margin-right: 25px;
   height: 40px;
   width: auto;
-  z-index:1;
+  z-index:3;
 }
 
 #feed{
@@ -177,6 +189,7 @@ border-style:solid;
   margin-right: 25px;
   height: 40px;
   width: auto;
+  z-index:2;
 }
 
 #leader{
@@ -187,6 +200,7 @@ border-style:solid;
   margin-right: 25px;
   height: 40px;
   width: auto;
+  z-index:2;
 }
 
 #friends{
@@ -197,6 +211,7 @@ border-style:solid;
   margin-right: 25px;
   height: 40px;
   width: auto;
+  z-index:2;
 }
 
 #profilepic{
@@ -227,7 +242,7 @@ footer {
   border-bottom-style:solid;
   border-color:#f25822;
   border-width:2px;
-  z-index:-1;
+  z-index:1;
 }
 #con1{
   top: 75px;
@@ -247,7 +262,7 @@ footer {
   background-color:white;
   right:70px;
   position:absolute;
-  z-index:2;
+  z-index:3;
 }
 #blo1{
   top:77.5px;
@@ -271,6 +286,7 @@ footer {
   position:absolute;
   right:80px;
   background-color:white;
+  z-index:1;
 }
 #bub1{
   top:75px;
