--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1,4 +1,8 @@
-
+.signOut {
+  position:absolute;
+  left: 1135px;
+  top: 5px;
+}
 .linkText {
   font-family: Helvetica, Sans-serif;
   color: #1000A4;
@@ -88,6 +92,14 @@ width:130px;
 padding-left:10px;
 right:10px;
 border-radius:10px;
+height:40px;
+margin-top:5px;
+z-index:2;
+}
+#login2{
+width:130px;
+padding-left:10px;
+right:10px;
 height:40px;
 margin-top:5px;
 z-index:2;
