--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -22,12 +22,8 @@
   z-index:1;
 }
 
-h1{
-  margin-top: 70px;
-}
-
 body{
-  background-color: lightgray;
+  background-color: white;
 }
 
 a{
@@ -60,35 +56,56 @@ top: 0;
 }
 
 #greenyc {
-height: 35px;
+height: 33px;
 width: auto;
 }
 
 #safetytab{
-  height:300px;
+  height:50px;
   width:250px;
   border-color: black;
   border-style:solid;
   border-width:1px;
-  border-radius:10px;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
   position: absolute;
   left: 0;
-right: 0;
-margin: auto;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   background-color:white;
-  z-index:1;
+  z-index:-1;
 }
 
 #safety{
-  z-index: 2;
+  z-index: 3;
+}
+
+#back{
+  height: 25px;
+  width: auto;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+#greenyclogo{
+  height: 40px;
+  width: auto;
+  margin-top: 20px;
+  margin-left: 5px;
+}
+
+#pindeco{
+  height: 30px;
+  width: auto;
+  margin-right: 7px;
+  margin-bottom: 10px;
 }
 
 #logo{
 margin-left: 25%;
 width: 50%;
 text-align: center;
-font-size: 2.2em;
-padding-top: 0px;
+padding-top: 8px;
 height: 50px;
 font-family: helvetica;
 font-weight: bold;
