--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -43,8 +43,12 @@ margin-top: -1px;
 padding-top: 10px;
 position: absolute;
 height: 40px;
-
 }
+
+p{
+  font-family: 'Roboto', sans-serif;
+}
+
 .editUserBar{
 margin-top: -1px;
 padding-top:10px;
@@ -128,7 +132,7 @@ margin-top:5px;
 top: 0;
 z-index:2;
 }
-<<<<<<< HEAD
+
 #login2{
 width:130px;
 padding-left:10px;
@@ -137,9 +141,7 @@ height:40px;
 margin-top:5px;
 z-index:2;
 }
-=======
 
->>>>>>> 0b4b3a7ac94e62ae1142c5f5833ff7bf81148626
 #rogueText{
 margin-top:-3px;
 position:absolute;
