--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -127,7 +127,7 @@ width:130px;
 padding-left:10px;
 right:10px;
 border-radius:10px;
-height:40px;
+height:30px;
 margin-top:5px;
 top: 0;
 z-index:2;
@@ -141,12 +141,9 @@ height:40px;
 margin-top:5px;
 z-index:2;
 }
-<<<<<<< HEAD
 
-=======
->>>>>>> 3163a9100b083cf3c956d8fe979c3d3ba9a69a5c
 #rogueText{
-margin-top:-3px;
+margin-top:-7px;
 position:absolute;
 font-size:1em;
 padding-left: 0px;
@@ -169,13 +166,14 @@ background-color: #aaffaa;
 #submit{
 width:30px;
 height:30px;
-margin-top:0px;
+margin-top:-3px;
 padding-top:0px;
 margin-left:230px;
 position:absolute;
 background-color:#28BBB4;
 border-style:none;
 border-radius:100%;
+z-index:2;
 }
 #box{
 height:25px;
@@ -183,13 +181,14 @@ background-color:#DAF2F2;
 border-style:none;
 font-size:1em;
 width:190px;
-margin-top: 4px;
+margin-top: 0px;
 margin-left:15px;
 position:absolute;
 border-radius:5px;
 border-width:1px;
 border-color:black;
 border-style:solid;
+z-index:2;
 }
 #magnifying{
   margin-top: -5px;
@@ -197,8 +196,8 @@ border-style:solid;
   width: 100%;
 }
 #profile{
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   background-color: black;
   border-radius: 100%;
   position:absolute;
@@ -285,10 +284,10 @@ border-style:solid;
 
 #profilepic{
   border-radius:100%;
-  height:30px;
-  width:30px;
+  height:25px;
+  width:25px;
   position:absolute;
-  top:5px;
+  top:2.5px;
   right:10px;
 }
 
