--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -22,8 +22,7 @@
   top: 0;
   width:100%;
   height:90px;
-  z-index: -2;
-  z-index:1;
+  z-index: 2;
 }
 
 body{
@@ -45,10 +44,6 @@ position: absolute;
 height: 40px;
 }
 
-p{
-  font-family: 'Roboto', sans-serif;
-}
-
 .editUserBar{
 margin-top: -1px;
 padding-top:10px;
@@ -61,10 +56,12 @@ height:40px;
 width: 25%;
 background-color: transparent;
 top: 0;
+z-index: 3;
+padding-top: 8px;
 }
 
 #greenyc {
-height: 33px;
+height: 37px;
 width: auto;
 }
 
@@ -113,7 +110,7 @@ width: auto;
 margin-left: 25%;
 width: 50%;
 text-align: center;
-padding-top: 8px;
+padding-top: 9px;
 height: 50px;
 font-family: helvetica;
 font-weight: bold;
@@ -141,10 +138,7 @@ height:40px;
 margin-top:5px;
 z-index:2;
 }
-<<<<<<< HEAD
 
-=======
->>>>>>> 3163a9100b083cf3c956d8fe979c3d3ba9a69a5c
 #rogueText{
 margin-top:-3px;
 position:absolute;
@@ -157,34 +151,25 @@ white-space:nowrap;
 background-color: #aaffaa;
 }
 
-#sneaky{
-  position:absolute;
-  height:40px;
-  width:300px;
-  margin-left:0px;
-  top: 0;
-  background-color: white;
-  z-index:-1;
-}
 #submit{
-width:30px;
-height:30px;
-margin-top:0px;
+width:25px;
+height:25px;
+margin-top: 4px;
 padding-top:0px;
-margin-left:230px;
+margin-left:215px;
 position:absolute;
 background-color:#28BBB4;
 border-style:none;
 border-radius:100%;
 }
 #box{
-height:25px;
+height:23px;
 background-color:#DAF2F2;
 border-style:none;
-font-size:1em;
+font-size:10px;
 width:190px;
-margin-top: 4px;
-margin-left:15px;
+margin-top: 5px;
+margin-left:20px;
 position:absolute;
 border-radius:5px;
 border-width:1px;
@@ -207,10 +192,14 @@ border-style:solid;
 }
 
 #rectangle{
-    width:225px;
+    width:255px;
     height:700px;
     background:white;
-    visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin-top: 40px;
+    z-index: 3;
 }
 
 #pin{
@@ -242,14 +231,7 @@ border-style:solid;
   width: auto;
   z-index:3;
 }
-#emptypin{
-  position:absolute;
-  top:84px;
-  right:37.5px;
-  height:24px;
-  width: auto;
-  z-index:4;
-}
+
 #feed{
   position: absolute;
   right:0;
@@ -375,6 +357,32 @@ footer {
 }
 #bub4{
   top:375px;
+}
+
+.cover{
+  position: absolute;
+  right:0;
+  top: 0;
+  height: 36px;
+  width: auto;
+  z-index:4;
+}
+
+#cover1{
+  margin-top: 77px;
+  margin-right: 44px;
+}
+#cover2{
+  margin-top: 142px;
+  margin-right: 44px;
+}
+#cover3{
+  margin-top: 207px;
+  margin-right: 44px;
+}
+#cover4{
+  margin-top: 620px;
+  margin-right: 44px;
 }
 
 #add{
