--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -56,48 +56,14 @@ position: absolute;
 height: 40px;
 }
 
-#editPopup{
-  height:200px;
-  width:150px;
+#set{
   font-family: helvetica, sans-serif;
   font-weight:bold;
   text-align:center;
 }
-#tab1{
-  height:30px;
-  width:155px;
-  background-color:#1dbcb4;
-  position:absolute;
-  margin-left:0px;
-  border-radius:5px;
-  left:15px;
-  top:35px;
-}
-#pinbody{
-  z-index:100;
-  height:160px;
-  width:155px;
-  left: 15px;
-  top: 50px;
-  position:absolute;
-  border: 1px solid #1dbcb4;
-  background-color: #ffffff;
-  border-radius:10px;
-}
-#poster{
-  text-align:left;
-  margin-top:5px;
-  margin-left: 5px;
-}
-#bodyText{
-  height:120px;
-  width:145px;
-  margin-top: -10px;
-  margin-left:4px;
-}
-#newPostHead{
-  font-size:1.5em;
-  margin-top:-10px;
+#uploadImage{
+  height:100%;
+  width:100%;
 }
 .editUserBar{
 margin-top: -1px;
@@ -439,7 +405,7 @@ footer {
   margin-right: 44px;
 }
 #cover2{
-  margin-top: 167px;
+  margin-top: 166.5px;
   margin-right: 44px;
 }
 #cover3{
@@ -447,7 +413,6 @@ footer {
   margin-right: 44px;
 }
 #cover4{
-  margin-top: 620px;
   margin-right: 44px;
 }
 
@@ -468,6 +433,11 @@ footer {
   margin-top: 12px;
   margin-bottom: 12px;
   background:gray;
+}
+
+#ihateeverything{
+  height:40px;
+  width:40px;
 }
 
 #profilecircle {
