--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -236,11 +236,12 @@ z-index:2;
   z-index:0;
 }
 #emptypin{
-  z-index:1000;
   position:absolute;
   height: 25px;
   width: auto;
   z-index:4;
+  right: 44px;
+  top: 120px;
 }
 #emptypinicon{
   position: absolute;
@@ -376,7 +377,32 @@ footer {
   padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
+  height: 350px;
 }
+
+#post{
+  width: 244.5px;
+  height: 20px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #1dbcb4;
+  border:none;
+  position:absolute;
+  left:1px;
+  bottom:1px;
+  font-weight: bold;
+  font-family: helvetica, sans-serif;
+  color:white;
+}
+#caption{
+  width: 200px;
+  top: 270px;
+  position: absolute;
+  z-index:2;
+  height:50px;
+  left:23px;
+}
+
 #bub2{
   top:140px;
 }
