--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -430,7 +430,7 @@ footer {
   margin-right: 44px;
 }
 #cover2{
-  margin-top: 166.5px;
+  margin-top: 167px;
   margin-right: 44px;
 }
 #cover3{
@@ -558,4 +558,18 @@ footer {
   margin-top: 207px;
   right: 0;
   margin-right: 82px;
+}
+
+#tab1{
+  height:271px;
+  width:246px;
+  border-bottom-left-radius:8px;
+  border-bottom-right-radius:8px;
+  position:absolute;
+  top: 0;
+  margin-top: 167px;
+  right: 0;
+  margin-right: 82px;
+  background-color:white;
+  z-index:2;
 }
