--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -380,19 +380,20 @@ footer {
 }
 
 #post{
-  width: 244.5px;
-  height: 20px;
+  width: 246px;
+  height: 25px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   background-color: #1dbcb4;
   border:none;
   position:absolute;
-  left:1px;
-  bottom:1px;
+  right: 0px;
+  bottom: 0px;
   font-weight: bold;
   font-family: helvetica, sans-serif;
   color:white;
 }
+
 #caption{
   width: 200px;
   top: 270px;
@@ -460,10 +461,7 @@ footer {
   background:gray;
 }
 
-#ihateeverything{
-  height:40px;
-  width:40px;
-}
+
 
 #profilecircle {
   margin-left: 100px;
@@ -559,19 +557,24 @@ footer {
   right: 0;
   margin-right: 82px;
 }
+#bubheader4{
+  margin-top: 360px;
+  right: 0;
+  margin-right: 82px;
+}
 
 .tab{
-  height:273px;
+  height:250px;
   width:246px;
-  border-bottom-left-radius:8px;
-  border-bottom-right-radius:8px;
   position: absolute;
   z-index: 3;
   background-color:white;
-  margin-top: 163px;
   right:0;
+  margin-top: 163px;
   margin-right: 82px;
+  overflow: auto;
 }
+
 
 #tableft{
   height:27px;
@@ -633,4 +636,79 @@ footer {
   margin-top: 165px;
   margin-right: 205px;
   z-index: 5;
+}
+
+.texttype{
+  width: 246px;
+  height: 25px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #1dbcb4;
+  border:none;
+  position:absolute;
+  right: 0;
+  top: 0;
+  margin-right: 82px;
+  margin-top: 413px;
+  font-weight: bold;
+  font-family: helvetica, sans-serif;
+  color:white;
+  z-index: 4;
+}
+
+#profileback{
+  height: 12px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 367px;
+  margin-right: 310px;
+  z-index: 5;
+}
+
+.page{
+  height:271px;
+  width:246px;
+  border-bottom-left-radius:8px;
+  border-bottom-right-radius:8px;
+  position: absolute;
+  z-index: 3;
+  background-color:white;
+  right:0;
+  margin-top: 385px;
+  margin-right: 82px;
+  overflow: auto;
+  padding-bottom: 10px;
+}
+
+#friendprofile{
+  background-color: lightgray;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 20px;
+  margin-right: 175px;
+  z-index: 5;
+}
+
+#frienduser{
+  margin-left: 85px;
+  margin-top: 25px;
+  font-size: 20px;
+}
+
+#friendbio{
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 30px;
+  font-size: 12px;
+}
+#friendpins{
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 30px;
+  font-size: 12px;
 }
