--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -558,9 +558,10 @@ footer {
   margin-right: 82px;
 }
 #bubheader4{
-  margin-top: 360px;
   right: 0;
+  margin-top: 360px;
   margin-right: 82px;
+  z-index: 4;
 }
 
 .tab{
@@ -700,13 +701,7 @@ footer {
   font-size: 20px;
 }
 
-#friendbio{
-  margin-left: 25px;
-  margin-right: 25px;
-  margin-top: 30px;
-  font-size: 12px;
-}
-#friendpins{
+#friendinfo{
   margin-left: 25px;
   margin-right: 25px;
   margin-top: 30px;
