--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -789,3 +789,19 @@ footer {
   margin-top: 30px;
   font-size: 12px;
 }
+
+.feedform{
+  height: 15px;
+  width: 202px;
+  font-size: 10px;
+  border-radius: 4px;
+  border-style: none;
+  margin-left: 10px;
+}
+
+.feedbutton{
+  height: 17px;
+  width: 17;
+  margin-left: 7px;
+
+}
