--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -774,6 +774,10 @@ footer {
   padding-top: 5px;
 }
 
+.friendlistitem:hover{
+  background-color: white;
+}
+
 #friendprofile{
   background-color: lightgray;
   height: 45px;
