--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -726,16 +726,13 @@ footer {
   height: 25px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
-  background-color: #1dbcb4;
+  background-color: white;
   border:none;
   position:absolute;
   right: 0;
   top: 0;
   margin-right: 82px;
   margin-top: 413px;
-  font-weight: bold;
-  font-family: helvetica, sans-serif;
-  color:white;
   z-index: 4;
 }
 
@@ -797,6 +794,7 @@ footer {
   border-radius: 4px;
   border-style: none;
   margin-left: 10px;
+  background-color:#DAF2F2;
 }
 
 .feedbutton{
@@ -811,4 +809,15 @@ footer {
   background-size: 12px auto;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+#friendform{
+  height: 17px;
+  width: 202px;
+  font-size: 10px;
+  border-radius: 4px;
+  border-style: none;
+  background-color: #DAF2F2;
+  margin-top: 8px;
+  margin-left: 10px;
 }
