--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -335,6 +335,7 @@ z-index:2;
   height: 40px;
   width: auto;
   z-index:2;
+  cursor: pointer;
 }
 #map{
   height:1000px;
@@ -372,6 +373,7 @@ z-index:2;
   height: 40px;
   width: auto;
   z-index:2;
+  cursor: pointer;
 }
 
 #leader{
@@ -383,6 +385,7 @@ z-index:2;
   height: 40px;
   width: auto;
   z-index:2;
+  cursor: pointer;
 }
 
 #friends{
@@ -394,8 +397,12 @@ z-index:2;
   height: 40px;
   width: auto;
   z-index:2;
+  cursor: pointer;
 }
 
+textarea{
+  resize: none;
+}
 
 #safetyicon{
   position: absolute;
@@ -857,6 +864,7 @@ footer {
   margin-right: 0px;
   overflow: auto;
   padding-bottom: 10px;
+  overflow-x: hidden;
 }
 
 #friendsearchbarDiv{
