--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1,4 +1,3 @@
-
 .signOut {
   position:absolute;
   left: 1135px;
@@ -175,7 +174,8 @@ height: 40px;
 }
 
 .editUserBar{
-margin-top: -1px;
+margin-top: 50px;
+margin-left: 80px;
 padding-top:10px;
 position:absolute;
 height:40px;
@@ -274,30 +274,33 @@ white-space:nowrap;
 }
 
 #submit{
-width:25px;
-height:25px;
-margin-top: 4px;
+width:20px;
+height:20px;
+margin-top: 7px;
 padding-top:0px;
 margin-left:215px;
 position:absolute;
-background-color:#28BBB4;
-border-style:none;
+background-color: white;
+background-image: url(images/feedsubmit.png);
+background-size: 12px auto;
+background-repeat: no-repeat;
+background-position: center;
+border-width: 1px;
+border-color: black;
 border-radius:100%;
 z-index:2;
 }
 #box{
-height:23px;
+height:20px;
 background-color:#DAF2F2;
 border-style:none;
 font-size:10px;
 width:190px;
-margin-top: 5px;
+margin-top: 7px;
 margin-left:20px;
 position:absolute;
 border-radius:5px;
-border-width:1px;
-border-color:black;
-border-style:solid;
+
 z-index:2;
 }
 #magnifying{
@@ -644,12 +647,8 @@ footer {
   margin-left: 400px;
 }
 #bio {
-  position: absolute;
-  top: 0;
-  margin-top: 250px;
-  margin-left: 400px;
-  margin-right: 200px;
-
+  text-align: left;
+  margin-right: 100px;
 }
 
 #profilepin {
@@ -1062,4 +1061,37 @@ footer {
 
 .left{
   text-align: left;
+}
+
+#logodisplay{
+  height: 280px;
+  width: auto;
+  position:absolute;
+  margin-left: 100px;
+  margin-top: 630px;
+}
+
+#logodescribe{
+  position: absolute;
+  margin-top: 750px;
+  margin-left: 570px;
+  margin-right: 100px;
+  text-align: left;
+  font-size: 20px;
+}
+
+#nouser{
+  font-size: 12px;
+  float: left;
+  margin-left:30px;
+  margin-top: 10px;
+}
+
+#leftleader{
+  text-align: left;
+}
+
+.leaflet-left{
+  margin-top: 50px;
+  margin-left: 17px;
 }
