--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -870,6 +870,13 @@ footer {
   overflow-x: hidden;
 }
 
+#usersBio{
+  width: 500px;
+  height: auto;
+  overflow: auto;
+  word-wrap: break-word;
+}
+
 #friendsearchbarDiv{
   height: 30px;
   width:246px;
