--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -25,6 +25,11 @@
   word-spacing: 2px;
   color: #000000;
 }
+.normalTextPins{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 95%;
+  color: #000000;
+}
 .red{
   color: #FE0101;
 }
