--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -658,8 +658,8 @@ footer {
 }
 #bio {
   text-align: left;
-  margin-right: 100px;
-  width: 500px;
+  margin-right: 200px;
+
   height: auto;
   overflow: auto;
   word-wrap: break-word;
@@ -1111,4 +1111,14 @@ footer {
 .leaflet-left{
   margin-top: 50px;
   margin-left: 17px;
+}
+
+#safetydeco{
+  height: 750px;
+  width: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 280px;
+  margin-right: -50px;
 }
