--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -702,6 +702,8 @@ footer {
   background-color: white;
   border-color: black;
   border-radius: 5px;
+  position: fixed;
+  bottom: 5;
 }
 
 .edit{
