--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -693,12 +693,13 @@ footer {
   font-size: 10px;
   margin-bottom: 0px;
 }
-
 .small{
   font-size: 12px;
 }
 .large{
   font-size: 50px;
+  position:absolute;
+  left:470px;
 }
 
 #signout{
