--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1143,7 +1143,7 @@ footer {
 #intrologo{
   position: absolute;
   left: 0;
-  margin-left: 400px;
+  margin-left: 28%;
   height: 130px;
   margin-top: 260px;
   z-index: 3;
@@ -1152,7 +1152,7 @@ footer {
 #introbutton{
   position: absolute;
   left: 0;
-  margin-left: 610px;
+  margin-left: 43.5%;
   margin-top: 360px;
   background-color: white;
   border-radius: 10px;
@@ -1169,11 +1169,12 @@ footer {
 }
 
 #introbg{
-  width: 1400px;
+  width: 100%;
+  height: 94%;
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: -40px;
+
   z-index: 1;
 }
 
@@ -1183,7 +1184,7 @@ footer {
   transform: rotate(270deg);
   width: 40px;
   margin-top: 735px;
-  margin-left: 670px;
+  margin-left: 48%;
 }
 
 #scrolldown{
@@ -1191,7 +1192,7 @@ footer {
   z-index: 4;
   color: black;
   margin-top: 715px;
-  margin-left: 580px;
+  margin-left: 41.5%;
 }
 
 #intropage{
