--- a/nyclean/src/App.css
+++ b/nyclean/src/App.css
@@ -1131,7 +1131,10 @@ footer {
   transition-duration: 500;
   z-index: 10;
 }
-
+.moveRight{
+  position:relative;
+  right:100px;
+}
 #nouser{
   font-size: 12px;
   float: left;
@@ -1154,7 +1157,7 @@ footer {
   right: 0;
   top: 0;
   margin-top: 280px;
-  margin-right: -50px;
+  margin-right: 50px;
 }
 
 #intrologo{
